# annimate

./: .gitignore  .tokeignore  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE-MIT  README.md  REFACTOR_PROOF.md  package.json  release.json  renovate.json  rustfmt.toml
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-docs.yml  config.yml
.github/workflows/: audit-cargo.yml  audit-pnpm.yml  build-macos.yml  check-cargo.yml  check-pnpm.yml  ci.yml  docs.yml  fmt-check-cargo.yml  fmt-check-pnpm.yml  release.yml  test-cargo.yml  test-pnpm-webdriver.yml  test-pnpm.yml  udeps-cargo.yml  validate-cff.yml
annimate_cli/: Cargo.toml
annimate_cli/src/: main.rs
annimate_core/: Cargo.toml  build.rs
annimate_core/src/: anno.rs  aql.rs  cache.rs  corpus.rs  error.rs  import.rs  lib.rs  metadata.rs  name.rs  node_name.rs  project.rs  query.rs  util.rs  version.rs
annimate_core/src/format/: csv.rs  mod.rs  table.rs  xlsx.rs
annimate_core/tests/: cache.rs  corpora.rs  export_matches.rs  exportable_anno_keys.rs  exportable_edge_types.rs  import.rs  metadata.rs  project.rs  query_nodes.rs  segmentations.rs  validation.rs
annimate_core/tests/data/: README.md  project_v1.anmt
annimate_core/tests/snapshots/: corpora__corpora.snap  corpora__default.snap  corpora__initial.snap  corpora__toggle1.snap  corpora__toggle2.snap  export_matches__empty.snap  export_matches__nocoverage.snap  export_matches__nondefaultsegmentation.snap  export_matches__pcc2_edge_anno_dominance.snap  export_matches__pcc2_edge_anno_pointing.snap  export_matches__pcc2_no_context.snap  export_matches__pcc2_primary_node.snap  export_matches__pcc2_primary_nodes_priority.snap  export_matches__subtok_annos.snap  export_matches__subtok_conflicting_name.snap  export_matches__subtok_gap.snap  export_matches__subtok_multiple_corpora.snap  export_matches__subtok_optional_nodes.snap  export_matches__subtok_renamed.snap  export_matches__subtok_segmentation_diplomatic.snap  export_matches__subtok_segmentation_diplomatic_anno.snap  export_matches__subtok_segmentation_norm.snap  export_matches__subtok_segmentation_tokens.snap  export_matches__subtok_segmentation_tokens_anno.snap  export_matches__subtok_varying_number_of_match_nodes.snap  export_matches__subtok_varying_number_of_match_nodes_with_explicit_primary_node_indices.snap  exportable_anno_keys__empty.snap  exportable_anno_keys__pcc2.snap  exportable_anno_keys__subtok.snap  exportable_anno_keys__subtok_conflicting_name.snap  exportable_anno_keys__subtok_renamed.snap  exportable_edge_types__no_corpora.snap  exportable_edge_types__parallel.snap  exportable_edge_types__parallel_pcc2.snap  exportable_edge_types__pcc2.snap  import__import-2.snap  import__import.snap  metadata__00_default.snap  metadata__01_initial.snap  metadata__02_toggle1.snap  (+39 more)
annimate_desktop/: .eslintrc.cjs  .npmrc  .prettierignore  .prettierrc.json  components.json  eslint.config.mjs  highlight.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
annimate_desktop/regrets/: anno-key-to-value.regret  column-idx-cp-to-graphemes.regret  edge-type-to-value.regret  filter-eligible-adapter.regret  find-eligible-query-node.regret  format-percentage.regret  group-by-adapter.regret  line-column-to-char-index.regret  manifest.json  truth1-raw-output.json  truth2-fingerprints.json  uniq.regret  value-to-anno-key.regret  value-to-edge-type.regret
annimate_desktop/regrets/adapters/: filter-eligible.mjs  group-by-adapter.mjs
annimate_desktop/src/: about-dialog.tsx  global.ts  index.css  main.tsx  vite-env.d.ts
annimate_desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  release.toml  tauri.conf.json
annimate_desktop/src-tauri/capabilities/: default.json
annimate_desktop/src-tauri/icons/: icon.icns
annimate_desktop/src-tauri/src/: api.rs  async_util.rs  delayed_queue.rs  error.rs  main.rs  preload.rs  slot.rs  state.rs  static_data.js  version.rs
annimate_desktop/src-tauri/tests/: version.rs
annimate_desktop/src/components/: app.tsx  corpus-list.tsx  error-alert.tsx  error-boundary.tsx  export-section.tsx  main-page.tsx  page.tsx  store-provider.tsx  (+2 more)
annimate_desktop/webdriver/: globals.d.ts  package.json  tsconfig.json  wdio.conf.ts
annis_export_cli/: Cargo.toml
annis_export_cli/src/: main.rs
annis_export_core/: Cargo.toml
annis_export_core/src/: anno.rs  aql.rs  corpus.rs  error.rs  lib.rs  node_name.rs  query.rs  util.rs
annis_export_core/src/format/: csv.rs  mod.rs
annis_export_core/tests/: export.rs  export_matches.rs  exportable_anno_keys.rs  query_nodes.rs  segmentations.rs
annis_export_core/tests/data/: README.md
annis_export_core/tests/snapshots/: export__pcc2.snap  export__pcc2_primary_node.snap  export__pcc2_primary_nodes_priority.snap  export__subtok_gap.snap  export__subtok_multiple_corpora.snap  export__subtok_segmentation_diplomatic.snap  export__subtok_segmentation_norm.snap  export__subtok_segmentation_tokens.snap  export__subtok_varying_number_of_match_nodes.snap  export_matches__pcc2_primary_node.snap  export_matches__pcc2_primary_nodes_priority.snap  export_matches__subtok_annos.snap  export_matches__subtok_gap.snap  export_matches__subtok_multiple_corpora.snap  export_matches__subtok_segmentation_diplomatic.snap  export_matches__subtok_segmentation_norm.snap  export_matches__subtok_segmentation_tokens.snap  export_matches__subtok_varying_number_of_match_nodes.snap  exportable_anno_keys__pcc2.snap  exportable_anno_keys__subtok.snap  segmentations__pcc2.snap  segmentations__subtok.snap
annis_export_desktop/: .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
annis_export_desktop/src/: about-dialog.tsx  index.css  main.tsx
annis_export_desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
annis_export_desktop/src-tauri/src/: api.rs  error.rs  main.rs
docs/dev/: ANNIS.md
docs/manual/: README.md  book.toml
docs/user-guide/: README.md  book.toml  gum-dep-object.anmt  rea-prenominal-genitive.anmt
pages/: index.html
(+146 files in other folders)
