[workspace]
members = ["annimate_core", "annimate_desktop/src-tauri"]
resolver = "3"

[workspace.package]
version = "1.3.4"
authors = ["Matthias Stemmler <matthias.stemmler@gmail.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/matthias-stemmler/annimate"
rust-version = "1.85"
license = "Apache-2.0"
publish = false

[workspace.lints.rust]
elided_lifetimes_in_paths = "deny"
unreachable_pub = "deny"
unsafe_code = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
default_trait_access = "deny"
doc_markdown = "deny"
needless_pass_by_value = "deny"
semicolon_if_nothing_returned = "deny"
unnecessary_wraps = "deny"
use_debug = "deny"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_rust_codeblocks = "deny"
missing_crate_level_docs = "deny"
private_intra_doc_links = "deny"

[workspace.dependencies]
cargo_metadata = "0.19.2"
csv = "1.3.1"
graphannis = "3.7.0"
graphannis-core = "3.7.0"
insta = "1.42.2"
itertools = "0.14.0"
regex = "1.11.1"
rust_xlsxwriter = "0.85.0"
serde = "1.0.219"
serde_json = "1.0.140"
tauri = "2.4.1"
tauri-build = "2.1.1"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-opener = "2.2.6"
tauri-plugin-process = "2.2.1"
tauri-plugin-single-instance = "2.2.3"
tauri-plugin-updater = "2.7.0"
tauri-plugin-window-state = "2.2.2"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = "1.44.2"
toml = "0.8.20"
urlencoding = "2.1.3"
zip = "2.6.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
