[workspace]
members = ["annimate_core", "annimate_desktop/src-tauri"]
resolver = "3"

[workspace.package]
version = "1.6.0"
authors = ["Matthias Stemmler <matthias.stemmler@gmail.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/matthias-stemmler/annimate"
rust-version = "1.88"
license = "Apache-2.0"
publish = false

[workspace.lints.rust]
elided_lifetimes_in_paths = "deny"
unreachable_pub = "deny"
unsafe_code = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
default_trait_access = "deny"
doc_markdown = "deny"
needless_pass_by_value = "deny"
semicolon_if_nothing_returned = "deny"
unnecessary_wraps = "deny"
use_debug = "deny"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_rust_codeblocks = "deny"
missing_crate_level_docs = "deny"
private_intra_doc_links = "deny"

[workspace.dependencies]
cargo_metadata = "0.23.1"
csv = "1.4.0"
graphannis = "4.0.1"
graphannis-core = "4.0.1"
insta = "1.43.2"
itertools = "0.14.0"
mimalloc = "0.1.48"
percent-encoding = "2.3.2"
regex = "1.12.2"
rust_xlsxwriter = "0.91.0"
serde = "1.0.228"
serde_json = "1.0.145"
tauri = "2.9.2"
tauri-build = "2.5.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-opener = "2.5.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-updater = "2.9.0"
tauri-plugin-window-state = "2.4.1"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = "1.48.0"
toml = "0.9.8"
toml_edit = "0.23.7"
zip = "6.0.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[profile.release.package]
annimate_core.opt-level = 3
graphannis.opt-level = 3
graphannis-core.opt-level = 3

[profile.dev.package]
graphannis.opt-level = 3
graphannis-core.opt-level = 3
insta.opt-level = 3
similar.opt-level = 3
