[package]
name = "annimate_core"
version = "0.1.0"
edition.workspace = true

[build-dependencies]
cargo_metadata = "0.18"

[dependencies]
csv = "1.3.0"
graphannis = "3.2.2"
graphannis-core = "3.2.2"
itertools = { workspace = true }
regex = "1.10.4"
serde = { workspace = true }
tempfile = { workspace = true }
thiserror = "1.0.59"
toml = "0.8.12"
urlencoding = "2.1.3"
zip = "1.2.0"

[dev-dependencies]
indoc = "2.0.5"
insta = { version = "1.38.0", features = ["redactions", "serde", "yaml"] }
