[package]
name = "annimate_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Annimate core library"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[build-dependencies]
cargo_metadata = { workspace = true }

[dependencies]
csv = { workspace = true }
graphannis = { workspace = true }
graphannis-core = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
rust_xlsxwriter = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
urlencoding = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["redactions", "serde", "yaml"] }
