[package]
name = "annis_export_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
annis_export_core = { path = "../annis_export_core" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
itertools = "0.12"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"
wildmatch = "2.3"
