[package]
name = "annis_export_cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
annis_export_core = { path = "../annis_export_core" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
itertools = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
wildmatch = "2.3"
