[package]
name = "annis_export_core"
version = "0.1.0"
edition.workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
csv = "1.0"
graphannis = "3.1"
graphannis-core = "3.1"
itertools = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
urlencoding = "2.1"

[dev-dependencies]
indoc = "2.0"
insta = { version = "1.34", features = ["serde"] }
