[package]
name = "annimate_desktop"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Annimate desktop application"
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
annimate_core = { path = "../../annimate_core" }
itertools = { workspace = true }
tauri = { workspace = true, features = ["dialog-open", "process-exit", "dialog-save", "objc-exception", "path-all", "process-relaunch", "shell-open", "updater", "wry"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
