[package]
name = "annimate_desktop"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Annimate"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
annimate_core = { path = "../../annimate_core" }
itertools = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-window-state = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "sync",
    "test-util",
    "time",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
