[package]
name = "annis_export_desktop"
version = "0.1.0"
edition.workspace = true

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
annis_export_core = { path = "../../annis_export_core", features = ["serde"] }
tauri = { version = "1.5", features = [ "path-all", "dialog-save", "process-relaunch", "shell-open"] }
serde = { workspace = true }
serde_json = "1.0"
tempfile = { workspace = true }
thiserror = { workspace = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
