[package]
name = "annis_export_desktop"
version = "0.1.0"
edition.workspace = true

[build-dependencies]
cargo_metadata = "0.18"
tauri-build = { version = "1.5", features = [] }

[dependencies]
annis_export_core = { path = "../../annis_export_core", features = ["serde"] }
itertools = { workspace = true }
tauri = { version = "1.5", features = [ "process-exit", "dialog-save", "objc-exception", "path-all", "process-relaunch", "shell-open", "wry"], default-features = false }
serde = { workspace = true }
serde_json = "1.0"
tempfile = { workspace = true }
thiserror = { workspace = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
